--- a/teams/team-riker/dev/templates/deployment.yaml
+++ b/teams/team-riker/dev/templates/deployment.yaml
@@ -1,3 +1,4 @@
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -7,20 +8,35 @@ spec:
   selector:
     matchLabels:
       app: skiapp
+  replicas: 10 # <- change replicas to 3
   template:
     metadata:
       labels:
         app: skiapp
     spec:
       containers:
-      - image: sharepointoscar/skiapp:v2
-        name: skiapp
+      - name: skiapp
+        image: sharepointoscar/skiapp:v2
         ports:
-          - containerPort: 8080
+        - containerPort: 8080
         resources:
           requests:
-            memory: '64Mi'
-            cpu: '250m'
+            memory: "64Mi"
+            cpu: "250m"
           limits:
-            memory: '128Mi'
-            cpu: '500m'
+            memory: "128Mi"
+            cpu: "500m"
+      nodeSelector: # <- add nodeselector, toleration and spread constraitns
+        team: default
+        type: karpenter
+      tolerations:
+        - key: 'karpenter'
+          operator: 'Exists'
+          effect: 'NoSchedule'
+      # topologySpreadConstraints:
+      #   - maxSkew: 1
+      #     topologyKey: topology.kubernetes.io/zone
+      #     whenUnsatisfiable: DoNotSchedule
+      #     labelSelector:
+      #       matchLabels:
+      #         app: skiapp
